change views for trains, add tables for all partials

--- a/app/views/admin/railway_stations/index.html.erb
+++ b/app/views/admin/railway_stations/index.html.erb
@@ -1,7 +1,7 @@
-<h1>Железнодорожные станции</h1>
+<h2>Железнодорожные станции</h2>
 
 <div class="mb-3">
-  <%= link_to "Новая станция", new_admin_railway_station_path, class: 'btn btn-secondary' %>
+  <%= link_to "Новая станция", new_admin_railway_station_path %>
 </div>
 
 <table class="table table-bordered">
