--- a/app/views/admin/railway_stations/show.html.erb
+++ b/app/views/admin/railway_stations/show.html.erb
@@ -1,4 +1,4 @@
-<%= link_to 'Назад', admin_railway_stations_path %>
+<%= link_to 'Назад', :back %>
 
 <div class="container mt-4">
   <div class="d-flex justify-content-between align-items-center mb-4">
@@ -48,7 +48,20 @@
       <% if @railway_station.routes.any? %>
         <div class="list-group">
           <% @railway_station.routes.each do |route| %>
-            <%= render partial: 'admin/routes/route', locals: { route: route } %>
+            <table class="table">
+              <thead>
+                <tr>
+                  <th>#</th>
+                  <th>Название маршрута</th>
+                  <th>Станции</th>
+                  <th>Создано</th>
+                  <th>Действия</th>
+                </tr>
+              </thead>
+              <tbody>
+                <%= render partial: 'admin/routes/route', locals: { route: route } %>
+              </tbody>
+            </table>
           <% end %>
         </div>
       <% else %>
