--- a/app/views/admin/trains/_form.html.erb
+++ b/app/views/admin/trains/_form.html.erb
@@ -17,6 +17,6 @@
   </div>
 
   <div>
-    <%= form.submit 'Сохранить', class: "btn btn-primary" %>
+    <%= form.submit 'Сохранить', class: "btn btn-secondary" %>
   </div>
 <% end %>
