--- a/app/views/admin/carriages/index.html.erb
+++ b/app/views/admin/carriages/index.html.erb
@@ -1,6 +1,6 @@
 <%= link_to 'Назад', admin_train_path(@train) %>
 
-<%= render partial: 'admin/trains/train', locals: { train: @train } %>
+<%= render partial: 'admin/trains/train_details', locals: { train: @train } %>
 
 <div class="mb-2">
   <%= link_to 'Новый вагон', new_admin_train_carriage_path(@train), class: 'btn btn-secondary' %>
