--- a/app/views/shared/_menu.html.erb
+++ b/app/views/shared/_menu.html.erb
@@ -21,7 +21,7 @@
           </li>
         <% else %>
           <li class="nav-item">
-            <%= link_to 'Поиск Билетов', new_searches_path, class: "nav-link active" %>
+            <%= link_to 'Поиск билетов', new_searches_path, class: "nav-link active" %>
           </li>
           
           <% if current_user.present? %>
