update show page for carriage

--- a/app/views/admin/carriages/show.html.erb
+++ b/app/views/admin/carriages/show.html.erb
@@ -1,6 +1,6 @@
 <%= link_to 'Назад', admin_train_carriages_path(@train) %>
 
-<%= render partial: 'admin/trains/train', locals: { train: @train } %>
+<%= render partial: 'admin/trains/train_details', locals: { train: @train } %>
 
 <div class="card mb-2">
   <div class="card-body">
