--- a/app/views/shared/_menu.html.erb
+++ b/app/views/shared/_menu.html.erb
@@ -19,6 +19,10 @@
           <li class="nav-item">
             <%= link_to 'Поиск поездов', new_searches_path, class: "nav-link active" %>
           </li>
+
+          <li class="nav-item">
+            <%= link_to 'Билеты', admin_tickets_path, class: "nav-link active" %>
+          </li>
         <% else %>
           <li class="nav-item">
             <%= link_to 'Поиск билетов', new_searches_path, class: "nav-link active" %>
